--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lodash": "^4.17.15"
   },
   "scripts": {
-    "start": "set PORT=8080 && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build"
   },
   "author": {
