Upgrade libraries versions

--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
   "name": "notes-manager",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "^3.1.1",
-    "redux": "^4.0.4",
-    "react-redux": "^7.1.1",
-    "react-modal": "^3.10.1",
-    "lodash": "^4.17.15"
+  "keywords": [
+    "react",
+    "SPA",
+    "notes"
+  ],
+  "license": "MIT",
+  "author": {
+    "name": "Elizaveta Grib",
+    "email": "yelizavetahr@gmail.com"
+  },
+  "main": "/src/index.jsx",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/ElizavetaGrib/Notes-manager"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
-  "author": {
-    "name": "Elizaveta Grib",
-    "email": "yelizavetahr@gmail.com"
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0",
+    "react-modal": "^3.11.2",
+    "lodash": "^4.17.15"
   },
-  "license": "MIT",
+  "private": true,
   "eslintConfig": {
     "extends": "react-app"
   },
