--- a/package.json
+++ b/package.json
@@ -13,21 +13,30 @@
   },
   "main": "/src/index.jsx",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/ElizavetaGrib/Notes-manager"
+    "type": "git",
+    "url": "https://github.com/ElizavetaGrib/Notes-manager"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.1",
-    "redux": "^4.0.5",
-    "react-redux": "^7.2.0",
     "react-modal": "^3.11.2",
-    "lodash": "^4.17.15"
+    "react-redux": "^7.2.0",
+    "react-scripts": "^3.4.1",
+    "redux": "^4.0.5"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.153",
+    "@types/node": "^14.0.5",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-modal": "^3.10.5",
+    "@types/react-redux": "^7.1.9",
+    "typescript": "^3.9.3"
   },
   "private": true,
   "eslintConfig": {
