--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-modal": "^3.11.2",
     "react-redux": "^7.2.0",
     "react-scripts": "^3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.153",
@@ -36,12 +37,17 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-modal": "^3.10.5",
     "@types/react-redux": "^7.1.9",
+    "@types/uuid": "^8.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.2",
+    "@typescript-eslint/parser": "^3.0.2",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "^2.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.9.3"
   },
   "private": true,
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
